--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "kill-port": "^2.0.1"
